load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "lang",
    srcs = [
        "cfg.go",
        "lang.go",
        "resolve.go",
    ],
    importpath = "github.com/dorfire/gazelle-jsonnet/lang",
    visibility = ["//build/gazelle:__pkg__"],
    deps = [
        "@bazel_gazelle//config:go_default_library",
        "@bazel_gazelle//label:go_default_library",
        "@bazel_gazelle//language:go_default_library",
        "@bazel_gazelle//repo:go_default_library",
        "@bazel_gazelle//resolve:go_default_library",
        "@bazel_gazelle//rule:go_default_library",
    ],
)
